# tabbed-github

./: .gitignore  CLAUDE.md  README.md  package.json
frontend/: index.html  settings.html
scripts/: deploy.sh
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.gemini.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-gemini/: icon.icns
src-tauri/src/: lib.rs  main.rs
