[package]
name = "tabbed-github"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tabbed_github_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Site profile selected at build time (see `SITE` in src/lib.rs). Default builds
# the GitHub app; `--features gemini` builds the Gemini app from the same source.
[features]
default = ["github"]
github = []
gemini = []

# `objc`'s `msg_send!` expands to a `#[cfg(feature = "cargo-clippy")]` check for a
# feature that no longer exists. A cfg inside a macro is evaluated against the
# crate it expands into, so check-cfg tests it against *our* feature list and warns
# on every `msg_send!`. Declaring it as an expected value silences those without
# `allow`ing the lint, so a misspelled site feature is still caught. Removable if
# the objc 0.2 dependency ever goes away.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Used to enable WKWebView trackpad swipe back/forward on macOS via `with_webview`.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

